<resources>
    <string name="app_name">MDMApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="continueText">Continue</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="show_only_restricted">Show only restricted</string>
    <string name="allow_new_registration">Allow new registration</string>
    <string name="textview">TextView</string>
    <string name="adb_warning_view">!Please run adb command!</string>
</resources>