<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AppListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/ScrollingConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScrollingFragment">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="408dp"
            android:layout_height="431dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339"
            tools:listitem="@layout/list_item" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="133dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yourNameView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="144dp"
            android:layout_height="87dp"
            android:layout_marginBottom="252dp"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/yourNameView"
            android:layout_width="227dp"
            android:layout_height="63dp"
            android:layout_marginTop="36dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/ProgressBarView"
            style="?android:attr/progressBarStyle"
            android:layout_width="221dp"
            android:layout_height="202dp"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:layout_marginBottom="460dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="172dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:queryHint="Search for application"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourNameView" />

        <CheckedTextView
            android:id="@+id/check"
            android:layout_width="172dp"
            android:layout_height="52dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="7dp"
            android:gravity="center"
            android:text="@string/show_only_restricted"
            app:layout_constraintBottom_toTopOf="@+id/recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <CheckBox
            android:id="@+id/checkMode"
            android:layout_width="119dp"
            android:layout_height="66dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="266dp"
            android:text="@string/allow_new_registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/endButton"
            app:layout_constraintTop_toBottomOf="@+id/recycler" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>